--- a/Login/LoginSignup.html
+++ b/Login/LoginSignup.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page| Register Page</title>
+    <title>Login | Register Page</title>
+    <link rel="stylesheet" href="Login.css">
 </head>
 <body>
+    <!--klasa e signup-->
     <div class=" container" id="container">
     <div class="form-container sign up">
     <form>
         <h1>Create Account</h1>
+        <!--Ikonat per regjistrimin permes rrejeteve sociale-->
         <div class="social-icons ">
             <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
             <a href="#" class="icon"><i class="fa-brands fa-linkedin"></i></a>
         </div>
-        <span> or use your email for registration</span>
+        <span> or use your email for registration</span><!--Alternativa me email-->
         <input type="text" placeholder="Name">
         <input type="email" placeholder="Email">
         <input type="password" placeholder="Password">
@@ -24,6 +27,7 @@
     </form>
  </div>
  </div>
+ <!--klasa e sign in-->
  <div class=" container" id="container">
     <div class="form-container sign in">
     <form>
@@ -43,6 +47,8 @@
     </form>
  </div>
  </div>
+ <!--pjesa e majte  per te kaluar te pjesa e sign in-->
+ <!--perdorimi i toggle comtainer perdoret per kalimin ndermjet formulareve;eshte me moderne dhe me e shpejte -->
  <div class="toggle-container">
     <div class="toggle">
         <div class="toggle-panel toggle-left">
@@ -52,6 +58,7 @@
         </div>
     </div>
  </div>
+ <!--pjesa e djathte per te kaluar te pjesa e sign up-->
  <div class="toggle-container">
     <div class="toggle">
         <div class="toggle-panel toggle-right">
