--- a/Login/LoginSignup.html
+++ b/Login/LoginSignup.html
@@ -7,67 +7,65 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 <body>
-    <!--klasa e signup-->
-    <div class=" container" id="container">
-    <div class="form-container sign up">
-    <form>
-        <h1>Create Account</h1>
-        <!--Ikonat per regjistrimin permes rrejeteve sociale-->
-        <div class="social-icons ">
-            <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+    <div class="container" id="container">
+        <!-- Sign Up Form -->
+        <div class="form-container sign-up-container">
+            <form>
+                <h1>Create Account</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-linkedin"></i></a>
+                </div>
+                <span>or use your email for registration</span>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <button>Sign Up</button>
+            </form>
         </div>
-        <span> or use your email for registration</span><!--Alternativa me email-->
-        <input type="text" placeholder="Name">
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <button>Sign Up</button>
-    </form>
- </div>
- </div>
- <!--klasa e sign in-->
- <div class=" container" id="container">
-    <div class="form-container sign in">
-    <form>
-        <h1>Sign In</h1>
-        <div class="social-icons ">
-            <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-            <a href="#" class="icon"><i class="fa-brands fa-linkedin"></i></a>
+
+        <!-- Sign In Form -->
+         <div class="container" id="container">
+        <div class="form-container sign-in-container">
+            <form>
+                <h1>Sign In</h1>
+                <div class="social-icons">
+                    <a href="#" class="icon"><i class="fa fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-github"></i></a>
+                    <a href="#" class="icon"><i class="fa fa-linkedin"></i></a>
+                </div>
+                <span>or use your email and password</span>
+
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <a href="#">Forgot your password?</a>
+                <button>Sign In</button>
+            </form>
         </div>
-        <span> or use your email and password</span>
-    
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <a href="#">Forget Your Password? </a>
-        <button>Sign In</button>
-    </form>
- </div>
- </div>
- <!--pjesa e majte  per te kaluar te pjesa e sign in-->
- <!--perdorimi i toggle comtainer perdoret per kalimin ndermjet formulareve;eshte me moderne dhe me e shpejte -->
- <div class="toggle-container">
-    <div class="toggle">
-        <div class="toggle-panel toggle-left">
-            <h1>Welcome back!</h1>
-            <p>Enter all your personal details to use all of site features</p>
-            <button class="hidden" id="login"> Sign In</button>
         </div>
-    </div>
- </div>
- <!--pjesa e djathte per te kaluar te pjesa e sign up-->
- <div class="toggle-container">
-    <div class="toggle">
-        <div class="toggle-panel toggle-right">
-            <h1>Hello!</h1>
-            <p>Register with your personal details to use all of site features</p>
-            <button class="hidden" id="register"> Sign Up</button>
+
+
+        <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-left">
+                    <h1>Welcome back!</h1>
+                    <p>To keep connected with us, please login with your personal info</p>
+                    <button class="ghost" id="login">Sign In</button>
+                </div>
+            </div>
+        </div>   
+         <div class="overlay-container">
+            <div class="overlay">
+                <div class="overlay-panel overlay-right">
+                    <h1>Hello!</h1>
+                    <p>Enter your personal details and start your journey with us</p>
+                    <button class="ghost" id="register">Sign Up</button>
+                </div>
+            </div>
         </div>
-    </div>
- </div>
-    
+    <script src="Login.js"></script>
 </body>
 </html>
