Slider HTML+stilizimi fillestar

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -6,7 +6,8 @@
     <title>Eventopia</title>
     <link rel="stylesheet" href="Homepage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    <!-- Linking google fonts for icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
     
 </head>
 <body>
@@ -50,10 +51,54 @@
         </div>
         <a href="#" class="view-more-btn">View More About Our Events</a>
     </div>
-   
-</div>
+   </div>
+</section>
+<section class="sliders">
+    <div class="container">
+        <div class="card">
+            <ul class="card-list">
+                <li class="card-item">
+                    <a href="#" class="card-link">
+                    <img src="Eventi1.jpg" alt="Nje Event" class="card-image">
+                    <p class="permbajtja">Latest Event</p>
+                    <h2 class="titulli">Forumi Rinor & Kulturor</h2>
+                    <button class=" card-button material-symbols-rounded">arrow_forward </button>
 
-    </section>
+                    </a>
+                </li>
+                <li class="card-item">
+                    <a href="#" class="card-link">
+                    <img src="Event.jpg" alt="Nje Event" class="card-image">
+                    <p class="permbajtja">Latest Event</p>
+                    <h2 class="titulli">Circus Event </h2>
+                    <button class=" card-button material-symbols-rounded">arrow_forward </button>
+
+                    </a>
+                </li>
+                <li class="card-item">
+                    <a href="#" class="card-link">
+                    <img src="Eventi2.jpg" alt="Nje Event" class="card-image">
+                    <p class="permbajtja">Latest Event</p>
+                    <h2 class="titulli">Forumi Rinor & Kulturor</h2>
+                    <button class=" card-button material-symbols-rounded">arrow_forward </button>
+
+                    </a>
+                </li>
+                <li class="card-item">
+                    <a href="#" class="card-link">
+                    <img src="Eventi3.jpg" alt="Nje Event" class="card-image">
+                    <p class="permbajtja">Latest Event</p>
+                    <h2 class="titulli">Forumi Rinor & Kulturor</h2>
+                    <button class=" card-button material-symbols-rounded">arrow_forward </button>
+
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+
+</section>
     
 </body>
 </html>
