Modifikime ne pjesen e html-Homepage

--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -53,7 +53,32 @@
         <a href="#" class="view-more-btn">View More About Our Events</a>
     </div>
    </div>
+   <!-- What we offer -->
 </section>
+<section class="what-we-offer">
+    <div class="container">
+    <h1 class="titulli">What we offer</h1>
+    <div class="katroret">
+        <div class="katrorispecifik1">
+            <h3>Discover Local Events</h3>
+            <p>Stay informed about the latest local events in your area, from community 
+                gatherings to concerts and exhibitions. Never miss an event that interests you!</p>
+        </div>
+        <div class="katrorispecifik2">
+            <h3>Job Opportunities for Events</h3>
+            <p>Explore event-related job opportunities, whether you're looking for volunteer roles, part-time gigs, or full-time positions.
+                 Connect with organizers who need your help!</p>
+        </div>
+        <div class="katrorispecifik3">
+            <h3>Personal Event Management</h3>
+            <p>Simplify planning for your personal events like weddings, birthday parties, 
+                and private celebrations. Use our tools to manage every detail effortlessly.</p>
+        </div>
+    </div>
+
+    </div>
+</section>
+<!-- Duhet me shtu edhe pjesen e responsivitetit -->
 <section class="sliders">
     <div class="container swiper">
         <div class="card-wapper">
@@ -119,7 +144,7 @@
            
            </div>
     </div>
-    <!-- Linking SwiperJS script -->
+    <!-- Linking SwiperJS script for slider-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="Script-slider.js"></script>
 </section>
