--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
     <!-- Linking SwiperJS CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+      <!-- Linking Remix icon for Reviews-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 <body>
     <header >
@@ -156,6 +158,64 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="Script-slider.js"></script>
 </section>
+<section class="reviews">
+    <div class="review">
+      <div class="container-majtas">
+        <h1>Read what our customers love about us</h1>
+        <p>
+          Organizing local events has never been this easy! Our platform helps 
+          you streamline event management, connect with participants, and create unforgettable moments.
+        </p>
+        <p>
+          From weddings to business conferences, we ensure every detail is perfect. 
+          Here's what our happy customers have to say about their experiences.
+        </p>
+        <button>Read our success stories</button>
+      </div>
+      <div class="container-djathtas">
+        <div class="card">
+          <img src="User1.jpeg" alt="User">
+          <div class="card-content">
+            <span><i class="ri-double-quotes-l"></i></span>
+            <div class="card-details">
+              <p>The team made my wedding a dream come true! Everything was so well-organized.</p>
+              <h4>Elona H.</h4>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="User2.webp" alt="User">
+          <div class="card-content">
+            <span><i class="ri-double-quotes-l"></i></span>
+            <div class="card-details">
+              <p>Our business event went smoothly, thanks to their expert planning!</p>
+              <h4>Arben K.</h4>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="Useri3.webp" alt="User">
+          <div class="card-content">
+            <span><i class="ri-double-quotes-l"></i></span>
+            <div class="card-details">
+              <p>Their platform is a lifesaver for managing community festivals effortlessly.</p>
+              <h4>Erona L.</h4>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="User4.jpeg" alt="User">
+          <div class="card-content">
+            <span><i class="ri-double-quotes-l"></i></span>
+            <div class="card-details">
+              <p>Highly recommend their services! Our gala dinner was a huge success.</p>
+              <h4>Deon T.</h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     
 </body>
 <footer class="footer">
