Disa ndryshime ne stilizim

--- a/Contact us/ContactUs.html
+++ b/Contact us/ContactUs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="ContactUs.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
 </head>
 <body>
     <header >
@@ -77,7 +78,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-section">
-            <h3 class="footer-title">Eventopin</h3>
+            <h3 class="footer-title">Eventopia</h3>
             <p class="footer-description">Stay connected, stay informed. Join us for exciting events and opportunities!</p>
         </div>
         
@@ -102,7 +103,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p> 2024 Eventopin. All Rights Reserved.</p>
+        <p> 2024 Eventopia. All Rights Reserved.</p>
     </div>
 </footer>
 
