--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -39,8 +39,6 @@
              From intimate gatherings to grand celebrations, we specialize in managing local events with precision and passion. 
              Whether it’s a wedding, corporate meeting, cultural festival, 
              or community event, our team is here to handle every detail, leaving you free to enjoy the moment.
-              Explore a world where creativity meets organization, and your vision becomes a stunning reality.
-             Ready to make your next event extraordinary? 
              Let’s make it happen—together.  </p>
             </div>
             <div class="actions">
@@ -221,7 +219,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-section">
-            <h3 class="footer-title">Eventopin</h3>
+            <h3 class="footer-title">Eventopina</h3>
             <p class="footer-description">Stay connected, stay informed. Join us for exciting events and opportunities!</p>
         </div>
         
@@ -246,7 +244,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p> 2024 Eventopin. All Rights Reserved.</p>
+        <p> 2024 Eventopia. All Rights Reserved.</p>
     </div>
 </footer>
 
