--- a/Events/Events.html
+++ b/Events/Events.html
@@ -47,27 +47,83 @@
     <div class="rrjete">
       <div class="kuti">
         <img src="Eventi5.jpg" alt="Kuti 1">
-        <h2>Kuti 1</h2>
-        <p>Informacion për kutinë 1.</p>
-        <button>Detaje</button>
+        <h2>City Square Fest: Experience the Magic </h2>
+        <p>Join us on June 15, 2024, for an unforgettable experience in the heart of the city</p>
+        <button>Discover More</button>
       </div>
       <div class="kuti">
         <img src="Eventi3.jpg" alt="Kuti 2">
-        <h2>Kuti 2</h2>
-        <p>Informacion për kutinë 2.</p>
-        <button>Detaje</button>
+        <h2>FutureTech Summit: Innovating Tomorrow</h2>
+        <p>Mark your calendar for September 12, 2024, and join us in shaping the future of technology!.</p>
+        <button>Discover More</button>
       </div>
       <div class="kuti">
         <img src="Eventi2.png" alt="Kuti 3">
-        <h2>Kuti 3</h2>
-        <p>Informacion për kutinë 3.</p>
-        <button>Detaje</button>
+        <h2>Wellness Revolution: Empowering Mind and Body</h2>
+        <p>Join us on April 8, 2024, for a transformative journey to better health and well-being!"</p>
+        <button>Discover More</button>
       </div>
       <div class="kuti">
-        <img src="Eventi6.jpg" alt="Kuti 15">
-        <h2>Kuti 4</h2>
-        <p>Informacion për kutinë 4.</p>
-        <button>Detaje</button>
+        <img src="Eventi6.jpg" alt="Kuti 4">
+        <h2>Artistry in Auction: Paint, Showcase, Inspire!</h2>
+        <p>Unleash your creativity on May 25, 2024, and see your masterpiece shine at our exclusive art auction!</p>
+        <button>Discover More</button>
+      </div>
+      <div class="kuti">
+        <img src="Eventi4.jpeg" alt="Kuti 5">
+        <h2>UBT Connect: Building Futures Together</h2>
+        <p>Be part of an inspiring gathering on March 18, 2024, where  innovation and ideas come to life at UBT!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi7.png" alt="Kuti 6">
+        <h2>Marketing Masters: Strategies for Tomorrow!</h2>
+        <p>Join us on July 22, 2024, for a dynamic event that will redefine your approach to modern marketing!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi8.jpg" alt="Kuti 7">
+        <h2>Sunny Hill Festival: Where Music Meets Culture</h2>
+        <p>Experience the vibrant energy on August 15, 2024, at the unforgettable Sunny Hill Festival!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi9.jpeg" alt="Kuti 8">
+        <h2>Albanian Culture Festival: Tradition in Motion</h2>
+        <p>Join us on June 30, 2024, for an unforgettable celebration of Albanian culture and traditional attire!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi10.webp" alt="Kuti 9">
+        <h2>BeerFest: A Celebration of Craft and Flavor</h2>
+        <p>Join us on September 5, 2024, for an unforgettable day of beers, music, and good times at BeerFest!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi11.jpg" alt="Kuti 10">
+        <h2>Plant a Tree Together: A Green Future for Nature</h2>
+        <p>Join us on April 20, 2024, as we come together to plant trees and make a positive impact on our environment!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Event12.jpeg" alt="Kuti 11">
+        <h2>Let's Talk: A Conversation for Change</h2>
+        <p>Join us on May 10, 2024, for an engaging and thought-provoking discussion on important topics that matter!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi13.jpeg" alt="Kuti 15">
+        <h2>Kids’ Fun Day: A World of Adventure Awaits!</h2>
+        <p>Bring your little ones on June 5, 2024, for a day filled with games, activities, and unforgettable fun</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi14.webp" alt="Kuti 15">
+        <h2>Career Connect: Meet Top Companies for Better</h2>
+        <p>Join us on October 3, 2024, to network with leading companies and explore exciting career opportunities!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi15.jpg" alt="Kuti 15">
+        <h2>UNUM Festival: A Journey of Music and Unity</h2>
+        <p>oin us on June 7, 2024, for an unforgettable music experience at UNUM Festival!</p>
+        <button>Discover More</button>
+      </div><div class="kuti">
+        <img src="Eventi16.jpg" alt="Kuti 15">
+        <h2>DanceFest: Move to the Beat and Feel the Rhythm</h2>
+        <p>Join us on July 12, 2024, for an exciting day of vibrant dance performances, music, and pure energy!</p>
+        <button>Discover More</button>
       </div>
     </div>
   </div>
