--- a/Events/Events.html
+++ b/Events/Events.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
     <link rel="stylesheet" href="Events.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
 </head>
 <header >
     <img class="logo" src="logoEventopia.png" alt="logo">
      <nav>
          <ul class="nav-links">
-             <li><a href="#">Home</a></li>
-             <li><a href="#">About</a></li>
-             <li><a href="#">Events</a></li>
-             <li><a href="#">Contact</a></li>
+          <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Homepage\Homepage.html">Home</a></li>
+          <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\About us\AboutUs.html">About us</a></li>
+          <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Events\Events.html">Events</a></li>
+          <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Contact us\ContactUs.html">Contact us</a></li>
          </ul>
      </nav>
      <div class="nav-butonat">
@@ -127,5 +128,42 @@
       </div>
     </div>
   </div>
+  <div class="card">
+    <h1 class="titulli"> Work Opportunities in Open Events</h1>
+    <p class="paragrafi">Eventopia is a platform that connects individuals with job opportunities in various events. Through this website, you can apply for daily or long-term jobs depending on the event’s needs. Event organizers can post calls for volunteers or paid workers, making it easier to find the right people to bring their activities to life. If you're looking for flexible work and want to engage in exciting events, Eventopia is the perfect place for you!</p>
+<a class="butoni"   href="#"><button>Learn more</button></a>
+    </div>
 </body>
+<footer class="footer">
+  <div class="footer-container">
+      <div class="footer-section">
+          <h3 class="footer-title">Eventopia</h3>
+          <p class="footer-description">Stay connected, stay informed. Join us for exciting events and opportunities!</p>
+      </div>
+      
+      <div class="footer-section">
+          <h3 class="footer-title">Quick Links</h3>
+          <ul class="footer-links">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Upcoming Events</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+      </div>
+
+      <div class="footer-section">
+          <h3 class="footer-title">Follow Us</h3>
+          <div class="social-links">
+              <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+              <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+      </div>
+  </div>
+  <div class="footer-bottom">
+      <p> 2024 Eventopia. All Rights Reserved.</p>
+  </div>
+</footer>
+
 </html>
