--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -18,10 +18,10 @@
        <img class="logo" src="logoEventopia.png" alt="logo">
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Homepage\Homepage.html">Home</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\About us\AboutUs.html">About us</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Events\Events.html">Events</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Contact us\ContactUs.html">Contact us</a></li>
             </ul>
         </nav>
         <div class="nav-butonat">
@@ -50,7 +50,7 @@
                 </a>
                 
         </div>
-        <a href="#" class="view-more-btn">View More About Our Events</a>
+        <a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Events\Events.html" class="view-more-btn">View More About Our Events</a>
     </div>
    </div>
    <!-- What we offer -->
@@ -219,7 +219,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-section">
-            <h3 class="footer-title">Eventopina</h3>
+            <h3 class="footer-title">Eventopia</h3>
             <p class="footer-description">Stay connected, stay informed. Join us for exciting events and opportunities!</p>
         </div>
         
