Sign In | Sign Up korrigjime dhe foto tek Contact Us

--- a/Contact us/ContactUs.html
+++ b/Contact us/ContactUs.html
@@ -42,7 +42,7 @@
         </div>
         <div class="full-contact-info">
             <div class="illustration">
-                <img src="" alt="">
+                <img src="photo.jpg" alt="Foto e contact">
             </div>
             <div class="contact-info">
                 <div class="infoBox">
