--- a/Events/Events.html
+++ b/Events/Events.html
@@ -18,8 +18,8 @@
          </ul>
      </nav>
      <div class="nav-butonat">
-     <a  href="#"><button>Login</button></a>
-     <a  href="#"><button>Sign Up</button></a>
+     <a  href="#"><button class="butoni-nav">Login</button></a>
+     <a  href="#"><button class="butoni-nav">Sign Up</button></a>
  </div>
  </header>
  
