Lidhja me Login/Sign Up

--- a/About us/AboutUs.html
+++ b/About us/AboutUs.html
@@ -20,8 +20,8 @@
             </ul>
         </nav>
         <div class="nav-butonat">
-            <a href="#"><button>Login</button></a>
-            <a href="#"><button>Sign Up</button></a>
+            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Login</button></a>
+        <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Sign Up</button></a>
         </div>
     </header>
     <!--pjesa e header About us ka mu shtu edhe ni background -->
