--- a/Login/Signin-up.html
+++ b/Login/Signin-up.html
@@ -28,10 +28,10 @@
                     </a>
                 </div>
                 <div class="input-form">
-                    <input type="text" placeholder="Username">
+                    <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-form">
-                    <input type="password" placeholder="Password">
+                    <input type="password" placeholder="Password" required>
                 </div>
                 <input type="submit" value="Login" class="btn">
                 <p class="account-text">Don't have an account? <a href="#" id="sign-up-btn2">Sign up</a></p>
@@ -53,13 +53,13 @@
                     </a>
                 </div>
                 <div class="input-form">
-                    <input type="text" placeholder="Username">
+                    <input type="text" placeholder="Username" required>
                 </div>
                 <div class="input-form">
-                    <input type="text" placeholder="Email">
+                    <input type="text" placeholder="Email" required>
                 </div>
                 <div class="input-form">
-                    <input type="password" placeholder="Password">
+                    <input type="password" placeholder="Password" required>
                 </div>
                 <input type="submit" value="Sign up" class="btn">
                 <p class="account-text">Already have an account? <a href="#" id="sign-in-btn2">Sign in</a></p>
