--- a/Contact us/ContactUs.html
+++ b/Contact us/ContactUs.html
@@ -29,13 +29,13 @@
             <p class="paragrafi">We'd love to hear from you! How can we help?</p>
             <form>
                 <div class="inputBox">
-                    <input type="text" placeholder="Enter your name">
+                    <input type="text" placeholder="Enter your name" required>
                 </div>
                 <div class="inputBox">
-                    <input type="email" placeholder="Enter your email address">
+                    <input type="email" placeholder="Enter your email address" required>
                 </div>
                 <div class="inputBox">
-                    <textarea placeholder="Enter your message..."></textarea>
+                    <textarea placeholder="Enter your message..." required></textarea>
                 </div>
                 <button type="submit" class="button">Submit</button>
             </form>
