Add Events html and css

--- a/Events/Events.html
+++ b/Events/Events.html
@@ -40,7 +40,7 @@
         <h2>Ready to Take Charge of Your Event?</h2>
         <h2>Manage It Like a Pro!</h2>
         <p>Take control of your event like never before! With just a click, you can organize, track, and ensure everything runs smoothly. From planning to execution, our platform gives you the tools to manage every detail with ease. Ready to make your event a success? Start now and bring your vision to life! </p>
-        <button>Manage Event</button>
+       <a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Manage Your Event\Manage.html"> <button>Manage Event</button></a>
       </div>
     </div>
 
