--- a/Events/Events.html
+++ b/Events/Events.html
@@ -34,7 +34,7 @@
         <h2>Create Your Event and Make It Unforgettable!</h2>
         <h2>Turn Your Event Ideas into Reality...</h2>
         <p>Have an exciting event idea? It’s time to bring it to life! Click here to add your event, set the details, and share your vision with the world. Whether it’s a small gathering or a large-scale celebration, our platform makes it easy to get started and manage every aspect of your event. Let’s make your event unforgettable!</p>
-        <button>Add Event</button>
+       <a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Addevents\Addevents.html"> <button>Add Event</button></a>
       </div>
       <div class="kuti-e-madhe">
         <h2>Ready to Take Charge of Your Event?</h2>
