CSS i te dyjave

--- a/Login/Signin.html
+++ b/Login/Signin.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-in</title>
+    <link rel="stylesheet" href="Signin.css">
 </head>
 <body>
     <div class="container">
         <form action="" class="sign-in-form">
-            <h2 class="title"></h2>
+            <h2 class="title">Sign in</h2>
             <div class="social-media">
                 <a href="#" class="social-icon">
                     <i class="fab fa-facebook"></i>
