Disa Modifikime Php

--- a/Contact us/ContactUs.html
+++ b/Contact us/ContactUs.html
@@ -19,8 +19,8 @@
              </ul>
          </nav>
          <div class="nav-butonat">
-            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Login</button></a>
-            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Sign Up</button></a>
+            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin.html"><button>Login</button></a>
+            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signup.php"><button>Sign Up</button></a>
      </div>
      </header>
     <div class="container">
