--- a/Homepage/Homepage.html
+++ b/Homepage/Homepage.html
@@ -27,8 +27,8 @@
             </ul>
         </nav>
         <div class="nav-butonat">
-        <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Login</button></a>
-        <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin-up.html"><button>Sign Up</button></a>
+          <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin.html"><button>Login</button></a>
+          <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signup.php"><button>Sign Up</button></a>
     </div>
     </header>
     <section class="home">
