--- a/ContactUs.html
+++ b/ContactUs.html
@@ -10,18 +10,18 @@
 <body>
     <header >
         <img class="logo" src="logoEventopia.png" alt="logo">
-         <nav>
-             <ul class="nav-links">
-                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Homepage\Homepage.html">Home</a></li>
-                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\About us\AboutUs.html">About us</a></li>
-                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Events\Events.html">Events</a></li>
-                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Contact us\ContactUs.html">Contact us</a></li>
-             </ul>
-         </nav>
-         <div class="nav-butonat">
-            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signin.html"><button>Login</button></a>
-            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Login\Signup.php"><button>Sign Up</button></a>
-     </div>
+        <nav>
+            <ul class="nav-links">
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Homepage.html">Home</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\AboutUs.html">About us</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Events.html">Events</a></li>
+                <li><a href="C:\Users\cakiq\OneDrive\Desktop\Projekti\ContactUs.html">Contact us</a></li>
+            </ul>
+        </nav>
+        <div class="nav-butonat">
+            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Signin.html"><button>Login</button></a>
+            <a  href="C:\Users\cakiq\OneDrive\Desktop\Projekti\Signup.html"><button>Sign Up</button></a>
+        </div>
      </header>
     <div class="container">
         <div class="form-section">
